# ChangeLog for mail-client/mozilla-thunderbird
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/Attic/ChangeLog,v 1.117 2006/06/04 02:44:24 halcy0n Exp $

  04 Jun 2006; Mark Loeser <halcy0n@gentoo.org>
  mozilla-thunderbird-1.5.0.4.ebuild:
  Stable on x86; bug #135254

  03 Jun 2006; <nixnut@gentoo.org> mozilla-thunderbird-1.5.0.4.ebuild:
  Stable on ppc; bug #135256

  03 Jun 2006; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-thunderbird-1.5.0.4.ebuild:
  amd64 stable wrt bug #135256

*mozilla-thunderbird-1.5.0.4 (02 Jun 2006)

  02 Jun 2006; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-thunderbird-1.5.0.4.ebuild:
  revision/security bump, modifications to ia64 and filepicker patches, sparc
  patch integrated into patchset

  02 Jun 2006; Thomas Cort <tcort@gentoo.org>
  mozilla-thunderbird-1.0.8.ebuild:
  Dropped ~alpha keyword since thunderbird is badly broken on alpha (Bug
  #131359) and cannot be marked stable for secuity Bug #130888.

  23 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/firefox-bus-error.patch, mozilla-thunderbird-1.5.0.2-r1.ebuild:
  Fix sparc issues wrt #115729 and keyworded ~sparc

*mozilla-thunderbird-1.5.0.2-r1 (30 Apr 2006)

  30 Apr 2006; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-thunderbird-1.5.0.2-r1.ebuild:
  textrels fix introduced

  29 Apr 2006; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-thunderbird-1.5.0.2.ebuild:
  stable wrt bug #130888

  29 Apr 2006; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-thunderbird-1.5.0.2.ebuild:
  patchset revision for --as-needed

  26 Apr 2006; Alec Warner <antarus@gentoo.org>
  mozilla-thunderbird-1.0.8.ebuild:
  Stable on x86 wrt bug # 130888

  24 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  mozilla-thunderbird-1.0.8.ebuild:
  Stable on sparc wrt security #130888

  23 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  mozilla-thunderbird-1.5.0.2.ebuild:
  ppc stable, bug #130888
