@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/enigmail
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/Attic/ChangeLog,v 1.23 2006/06/04 05:34:07 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/Attic/ChangeLog,v 1.24 2006/06/06 17:06:51 gustavoz Exp $
+
+  06 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  enigmail-0.94.0-r4.ebuild:
+  Stable on sparc wrt security #135256
 
   04 Jun 2006; Mark Loeser <halcy0n@gentoo.org> enigmail-0.94.0-r4.ebuild:
   Stable on x86; bug #135256
