@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/Attic/ChangeLog,v 1.117 2006/06/04 02:44:24 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/Attic/ChangeLog,v 1.118 2006/06/06 17:05:58 gustavoz Exp $
+
+  06 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  mozilla-thunderbird-1.5.0.4.ebuild:
+  Stable on sparc wrt security #135256
 
   04 Jun 2006; Mark Loeser <halcy0n@gentoo.org>
   mozilla-thunderbird-1.5.0.4.ebuild:
